[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/Box.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Environment/BrownCrate.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 96, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 99.9732 )

[sub_resource type="Animation" id=3]
resource_name = "destroy"
length = 0.75
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 2 ), ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.749636 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0.509804, 0.509804, 1 ), Color( 0.545098, 0, 0, 1 ), Color( 0.611765, 0.611765, 0.611765, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Area2D2/CollisionShape2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.75 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 3, 3 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.6, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.261719, 0.261719 ), Vector2( 0.15, 0.15 ), Vector2( 0.4, 0.4 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Area2D2/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.75 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="AnimationNodeAnimation" id=4]
animation = "destroy"

[sub_resource type="AnimationNodeStateMachine" id=5]
states/destroy/node = SubResource( 4 )
states/destroy/position = Vector2( -1000, -134 )
end_node = "destroy"
graph_offset = Vector2( -1346, -262 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=6]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 32, 32 )

[node name="Box" type="RigidBody2D"]
mode = 2
mass = 0.8
gravity_scale = 0.0
custom_integrator = true
contacts_reported = 3
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.261719, 0.261719 )
texture = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -64, -64, 0, -64, 64, -64, 64, 32, 32, 64, -32, 64, -64, 32 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="anim" type="AnimationPlayer" parent="."]
playback_speed = 0.75
anims/destroy = SubResource( 3 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 5 )
anim_player = NodePath("../anim")
active = true
parameters/playback = SubResource( 6 )

[node name="Area2D2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
shape = SubResource( 7 )
disabled = true
[connection signal="body_entered" from="." to="." method="_on_Box_body_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_Area2D2_body_entered"]
